# Django

./: README.md  pyproject.toml
quotes/: manage.py
quotes/quotes/: settings.py  urls.py
