[tool.poetry]
name = "django"
version = "0.1.0"
description = ""
authors = ["Kostiantyn-Liapkalo <lynx87@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = {git = "https://github.com/sdispater/pendulum.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
